# aoc-2021

./: meson.build
src/: day01-1.cxx  day01-2.cxx  day02-1.cxx  day02-2.cxx  day03-1.cxx  day03-2.cxx  day04-1.cxx  day04-2.cxx  day05-1.cxx  day05-2.cxx  day06-1.cxx  day06-2.cxx  day07-1.cxx  day07-2.cxx  day08-1.cxx  day08-2.cxx  day09-1.cxx  day09-2.cxx  day10-1.cxx  day10-2.cxx  day11-1.cxx  day11-2.cxx  day12-1.cxx  day12-2.cxx  day13-1.cxx  day13-2.cxx  day14-1.cxx  day14-2.cxx  meson.build  template.cxx
