day01_1 = executable('day01-1', 'day01-1.cxx')
day01_2 = executable('day01-2', 'day01-2.cxx')
day02_1 = executable('day02-1', 'day02-1.cxx')
day02_2 = executable('day02-2', 'day02-2.cxx')
day03_1 = executable('day03-1', 'day03-1.cxx')
day03_2 = executable('day03-2', 'day03-2.cxx')
day04_1 = executable('day04-1', 'day04-1.cxx')
day04_2 = executable('day04-2', 'day04-2.cxx')
day05_1 = executable('day05-1', 'day05-1.cxx')
day05_2 = executable('day05-2', 'day05-2.cxx')
day06_1 = executable('day06-1', 'day06-1.cxx')
day06_2 = executable('day06-2', 'day06-2.cxx')
day07_1 = executable('day07-1', 'day07-1.cxx')
day07_2 = executable('day07-2', 'day07-2.cxx')
day08_1 = executable('day08-1', 'day08-1.cxx')
day08_2 = executable('day08-2', 'day08-2.cxx')
day09_1 = executable('day09-1', 'day09-1.cxx')
day09_2 = executable('day09-2', 'day09-2.cxx')
#day10_1 = executable('day10-1', 'day10-1.cxx')
#day10_2 = executable('day10-2', 'day10-2.cxx')
#day11_1 = executable('day11-1', 'day11-1.cxx')
#day11_2 = executable('day11-2', 'day11-2.cxx')
#day12_1 = executable('day12-1', 'day12-1.cxx')
#day12_2 = executable('day12-2', 'day12-2.cxx')
#day13_1 = executable('day13-1', 'day13-1.cxx')
#day13_2 = executable('day13-2', 'day13-2.cxx')
#day14_1 = executable('day14-1', 'day14-1.cxx')
#day14_2 = executable('day14-2', 'day14-2.cxx')
#day15_1 = executable('day15-1', 'day15-1.cxx')
#day15_2 = executable('day15-2', 'day15-2.cxx')
#day16_1 = executable('day16-1', 'day16-1.cxx')
#day16_2 = executable('day16-2', 'day16-2.cxx')
#day17_1 = executable('day17-1', 'day17-1.cxx')
#day17_2 = executable('day17-2', 'day17-2.cxx')
#day18_1 = executable('day18-1', 'day18-1.cxx')
#day18_2 = executable('day18-2', 'day18-2.cxx')
#day19_1 = executable('day19-1', 'day19-1.cxx')
#day19_2 = executable('day19-2', 'day19-2.cxx')
#day20_1 = executable('day20-1', 'day20-1.cxx')
#day20_2 = executable('day20-2', 'day20-2.cxx')
#day21_1 = executable('day21-1', 'day21-1.cxx')
#day21_2 = executable('day21-2', 'day21-2.cxx')
#day22_1 = executable('day22-1', 'day22-1.cxx')
#day22_2 = executable('day22-2', 'day22-2.cxx')
#day23_1 = executable('day23-1', 'day23-1.cxx')
#day23_2 = executable('day23-2', 'day23-2.cxx')
#day24_1 = executable('day24-1', 'day24-1.cxx')
#day24_2 = executable('day24-2', 'day24-2.cxx')
#day25_1 = executable('day25-1', 'day25-1.cxx')
#day25_2 = executable('day25-2', 'day25-2.cxx')
